overflow issues solved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .gradient-01 {
   background-image: linear-gradient(
     270deg,
